# SM-insights

./: .gitattributes  .gitignore  README.md  VisualPolitikEN_videos_1738184594.json  package.json  pnpm-lock.yaml
DS/Scraping/: youtube-page-scraper.py
Notebooks/: requirements.txt
Notebooks/BERTopic/: BERTopic-after-POC.ipynb  BERTopic.ipynb
Notebooks/Clustering/: assumptions.ipynb  (+1 more)
fastapi-backend/: Dockerfile  README.md  main.py  pyproject.toml
fastapi-backend/app/: main.py
fastapi-backend/app/api/deep_stc/: routes.py
fastapi-backend/app/api/youtube_comments/: __init__.py  logic.py  models.py  routes.py
fastapi-backend/app/clients/: youtube_client.py
fastapi-backend/app/core/: config.py
fastapi-backend/app/datasets/: Invincible_season_3_trailer_50.csv  NVoBpDe3ioQ_60.csv  T31MoLJws4U_60.csv  aHZW7TuY_yo_100.csv  bdgIXPVj9qc_100_100.csv  bdgIXPVj9qc_150_150.csv  bdgIXPVj9qc_60_60.csv  df7pPYSgkqg_200.csv  df7pPYSgkqg_60.csv
fastapi-backend/app/process/deep_stc_analysis/: BERTopic.py  TopicCluster.py  __init__.py  emojies.py  emoticons.py  gemini_labeling.py  mock_data.py  shared_state.py  stc_process.py  subclusters.py
fastapi-backend/app/process/deep_stc_analysis/models/: __init__.py  embedding.py  hdbscan.py  hybrid_clustering.py  kmeans.py  representation.py  umap.py
fastapi-backend/app/utils/: __init__.py  save_array_to_csv.py
final-project-next/: .eslintrc.json  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
sm-insights-next/: README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
(+156 files in other folders)
