[project]
name = "fastapi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bertopic>=0.17.0",
    "fastapi[standard]>=0.115.12",
    "google-api-python-client>=2.166.0",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "langchain>=0.3.25",
    "langchain-google-genai>=2.0.10",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
    "transformers>=4.52.4",
    "uvicorn[standard]>=0.34.3",
]
